--- a/src/main/resources/com/project/app/fxml/main.fxml
+++ b/src/main/resources/com/project/app/fxml/main.fxml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.MainController" />
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.MainController">
+    <left>
+        <fx:include source="components/sidebar.fxml" />
+    </left>
+   <center>
+      <AnchorPane fx:id="contentArea" prefHeight="1000.0" prefWidth="1110.0" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
