--- a/src/main/resources/com/project/app/fxml/components/sidebar.fxml
+++ b/src/main/resources/com/project/app/fxml/components/sidebar.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="1000.0" prefWidth="290.0" style="-fx-background-color: #1B4332;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.SidebarController">
    <children>
       <VBox layoutX="115.0" layoutY="93.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -61,7 +60,35 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#goLogout" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE">
+            <AnchorPane prefHeight="87.0" prefWidth="290.0">
+               <children>
+                  <Button fx:id="btnLogoutAdmin" mnemonicParsing="false" onAction="#goLogout" opacity="0.0" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <font>
+                        <Font name="Georgia" size="24.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/logout-sidebar.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="btnManageAccount" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#goManageAccount" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Manage Accounts" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <font>
+                        <Font name="Georgia" size="24.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/manageaccount-sidebar.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+            </AnchorPane>
+            <Button fx:id="btnLogoutOwner" mnemonicParsing="false" onAction="#goLogout" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE">
                <font>
                   <Font name="Georgia" size="24.0" />
                </font>
