--- a/src/main/resources/com/project/app/fxml/contents/home.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/home.fxml
@@ -1,8 +1,197 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.HomeController">
-
-</AnchorPane>
+<HBox prefHeight="1000.0" prefWidth="1111.0" spacing="20.0" style="-fx-background-color: #ececec;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.HomeController">
+   <children>
+      <VBox prefHeight="1000.0" prefWidth="706.0" spacing="20.0">
+         <children>
+            <HBox prefHeight="530.0" prefWidth="706.0" spacing="20.0">
+               <children>
+                  <AnchorPane prefHeight="511.0" prefWidth="706.0" style="-fx-background-color: white; -fx-background-radius: 15 15 15 15;">
+                     <children>
+                        <LineChart layoutX="44.0" layoutY="136.0" prefHeight="336.0" prefWidth="697.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="136.0">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </LineChart>
+                        <HBox alignment="CENTER_LEFT" layoutX="143.0" layoutY="44.0" prefHeight="44.0" prefWidth="318.0" spacing="10.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="9.0">
+                           <children>
+                              <ImageView fitHeight="44.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../images/overview-home.png" />
+                                 </image>
+                              </ImageView>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sales Overview" wrappingWidth="172.224609375">
+                                 <font>
+                                    <Font name="Georgia Bold" size="20.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <Text fill="#616161" layoutX="22.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Overall Sales" AnchorPane.leftAnchor="20.0">
+                           <font>
+                              <Font name="Georgia" size="15.0" />
+                           </font>
+                        </Text>
+                        <Button alignment="CENTER" layoutX="645.0" layoutY="112.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="58.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="363.0" AnchorPane.rightAnchor="3.0">
+                           <graphic>
+                              <ImageView fitHeight="45.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../images/more-home.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="100.0" prefHeight="34.0" prefWidth="664.0">
+                           <children>
+                              <TextField prefHeight="34.0" prefWidth="163.0" style="-fx-background-color: transparent;" text="Rp8.000.000.000">
+                                 <font>
+                                    <Font name="Georgia" size="17.0" />
+                                 </font>
+                              </TextField>
+                              <AnchorPane prefHeight="34.0" prefWidth="100.0">
+                                 <children>
+                                    <AnchorPane layoutX="13.0" layoutY="-12.0" prefHeight="28.0" prefWidth="80.0" style="-fx-background-color: cyan; -fx-background-radius: 10 10 10 10;" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="3.0">
+                                       <children>
+                                          <HBox alignment="CENTER_LEFT" layoutX="-77.0" layoutY="-40.0" prefHeight="28.0" prefWidth="80.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                             <children>
+                                                <ImageView fitHeight="19.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../images/profit-home.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <TextField prefHeight="25.0" prefWidth="53.0" style="-fx-background-color: transparent;" text="3000%">
+                                                   <font>
+                                                      <Font name="Georgia" size="12.0" />
+                                                   </font>
+                                                </TextField>
+                                             </children>
+                                             <padding>
+                                                <Insets left="5.0" />
+                                             </padding>
+                                          </HBox>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                              </AnchorPane>
+                              <Circle fill="#00c0e8" radius="10.0" stroke="#998a8a00" strokeType="INSIDE">
+                                 <HBox.margin>
+                                    <Insets right="5.0" />
+                                 </HBox.margin>
+                              </Circle>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sparepart">
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets right="15.0" />
+                                 </HBox.margin>
+                              </Text>
+                              <Circle fill="#b8e716" layoutX="278.0" layoutY="27.0" radius="10.0" stroke="#998a8a00" strokeType="INSIDE">
+                                 <HBox.margin>
+                                    <Insets right="5.0" />
+                                 </HBox.margin>
+                              </Circle>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Jasa">
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </HBox>
+            <HBox prefHeight="461.0" prefWidth="706.0" spacing="20.0">
+               <children>
+                  <AnchorPane prefHeight="460.0" prefWidth="747.0" style="-fx-background-color: white; -fx-background-radius: 15 15 15 15;">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="34.0" prefWidth="440.0" spacing="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="9.0">
+                           <children>
+                              <ImageView fitHeight="44.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../images/transaction-home.png" />
+                                 </image>
+                              </ImageView>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Histori Transaksi">
+                                 <font>
+                                    <Font name="Georgia Bold" size="20.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <TableView layoutX="68.0" layoutY="59.0" prefHeight="369.0" prefWidth="688.0" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="59.0">
+                           <columns>
+                              <TableColumn prefWidth="102.0" text="Username Admin" />
+                              <TableColumn prefWidth="126.0" text="NoSurat" />
+                              <TableColumn prefWidth="97.0" text="Perusahaan" />
+                              <TableColumn prefWidth="77.0" text="Harga" />
+                              <TableColumn prefWidth="77.0" text="Tanggal" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <VBox prefHeight="1000.0" prefWidth="343.0">
+         <children>
+            <AnchorPane prefHeight="1000.0" prefWidth="343.0" style="-fx-background-color: white; -fx-background-radius: 15 15 15 15;">
+               <children>
+                  <TableView layoutX="58.0" layoutY="51.0" prefHeight="904.0" prefWidth="329.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="51.0">
+                    <columns>
+                      <TableColumn prefWidth="114.0" text="NoTagihan" />
+                        <TableColumn prefWidth="105.0" text="Tanggal" />
+                        <TableColumn prefWidth="96.0" text="Status" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <HBox alignment="CENTER_LEFT" layoutX="16.0" layoutY="-5.0" prefHeight="44.0" prefWidth="318.0" spacing="10.0" AnchorPane.bottomAnchor="909.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="9.0">
+                     <children>
+                        <ImageView fitHeight="44.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/statustagihan-home.png" />
+                           </image>
+                        </ImageView>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Status Tagihan">
+                           <font>
+                              <Font name="Georgia Bold" size="20.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
+   </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
+</HBox>
