--- a/src/main/resources/com/project/app/fxml/contents/penawaran.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/penawaran.fxml
@@ -1,8 +1,183 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.HomeController">
-
+<AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.PenawaranController">
+   <children>
+      <VBox layoutX="255.0" layoutY="156.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+         <children>
+            <HBox prefHeight="105.0" prefWidth="1070.0">
+               <children>
+                  <VBox alignment="CENTER_LEFT" prefHeight="89.0" prefWidth="1070.0" spacing="20.0" style="-fx-border-color: BLACK; -fx-border-width: 0 0 3 0;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="PENAWARAN" wrappingWidth="353.986328125">
+                           <font>
+                              <Font name="Georgia Bold" size="44.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Text>
+                     </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+            </HBox>
+            <VBox prefHeight="883.0" prefWidth="1070.0" spacing="10.0">
+               <children>
+                  <AnchorPane prefHeight="31.0" prefWidth="971.0">
+                     <children>
+                        <AnchorPane layoutX="-6.0" prefHeight="36.0" prefWidth="522.0" style="-fx-background-color: white; -fx-background-radius: 8 8 8 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8 8 8 8; -fx-border-width: 1 1 1 1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="548.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <HBox alignment="CENTER_LEFT" layoutX="4.0" prefHeight="34.0" prefWidth="643.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="0.0">
+                                 <children>
+                                    <TextField prefHeight="31.0" prefWidth="486.0" promptText="Search" style="-fx-background-radius: 8 0 0 8; -fx-background-color: transparent; -fx-border-color: white;">
+                                       <font>
+                                          <Font name="Georgia" size="15.0" />
+                                       </font>
+                                    </TextField>
+                                    <Button mnemonicParsing="false" prefHeight="13.0" prefWidth="41.0" style="-fx-background-color: white; -fx-border-color: #C8C8C8; -fx-border-width: 0 0 0 1;">
+                                       <graphic>
+                                          <ImageView fitHeight="23.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../../images/search-sparepart.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </AnchorPane>
+                  <VBox prefHeight="475.0" prefWidth="1070.0" spacing="10.0">
+                     <children>
+                        <HBox prefHeight="42.0" prefWidth="1070.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Rincian Pekerjaan &amp; Sparepart">
+                                 <font>
+                                    <Font name="Georgia" size="20.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <VBox prefHeight="60.0" prefWidth="1070.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nama Pekerjaan :">
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                              </Text>
+                              <HBox prefHeight="46.0" prefWidth="1070.0">
+                                 <children>
+                                    <TextField prefHeight="34.0" prefWidth="1179.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets top="5.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="60.0" prefWidth="1070.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nama Mesin :">
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                              </Text>
+                              <HBox prefHeight="46.0" prefWidth="1070.0">
+                                 <children>
+                                    <TextField prefHeight="34.0" prefWidth="1136.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets top="5.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="60.0" prefWidth="1070.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Spesifikasi Mesin :">
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                              </Text>
+                              <HBox prefHeight="46.0" prefWidth="1070.0">
+                                 <children>
+                                    <TextField prefHeight="34.0" prefWidth="1329.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets top="5.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="96.0" prefWidth="1070.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Deskripsi :">
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                              </Text>
+                              <HBox prefHeight="99.0" prefWidth="1070.0">
+                                 <padding>
+                                    <Insets top="5.0" />
+                                 </padding>
+                                 <children>
+                                    <TextArea prefHeight="73.0" prefWidth="1084.0" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="1070.0">
+                           <children>
+                              <Button graphicTextGap="15.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="163.0" text="Tambah Detail">
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fitHeight="42.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/plus-penawaran.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <ScrollPane prefHeight="440.0" prefWidth="1070.0" style="-fx-border-width: 1 0 0 0; -fx-border-color: #c8c8c8; -fx-background-color: transparent;">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="422.0" prefWidth="1055.0" />
+                    </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
