--- a/src/main/resources/com/project/app/fxml/components/sidebar.fxml
+++ b/src/main/resources/com/project/app/fxml/components/sidebar.fxml
@@ -62,7 +62,7 @@
             </Button>
             <AnchorPane prefHeight="87.0" prefWidth="290.0">
                <children>
-                  <Button fx:id="btnLogoutAdmin" mnemonicParsing="false" onAction="#goLogout" opacity="0.0" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Button fx:id="btnLogoutAdmin" mnemonicParsing="false" onAction="#goLogout" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <font>
                         <Font name="Georgia" size="24.0" />
                      </font>
