--- a/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.TagihanController">
    <children>
       <VBox layoutX="255.0" layoutY="156.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -68,16 +69,16 @@
                         </AnchorPane>
                      </children>
                   </AnchorPane>
-                  <TableView prefHeight="823.0" prefWidth="1070.0">
+                  <TableView  fx:id="tableTagihan" prefHeight="823.0" prefWidth="1070.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="No.Tagihan" />
-                      <TableColumn prefWidth="75.0" text="No.Surat" />
-                        <TableColumn prefWidth="75.0" text="Perusahaan" />
-                        <TableColumn prefWidth="75.0" text="Tanggal" />
-                        <TableColumn prefWidth="75.0" text="Total" />
-                        <TableColumn prefWidth="75.0" text="Status" />
+                        <TableColumn fx:id="colNoTagihan" text="No.Tagihan" prefWidth="150"/>
+                        <TableColumn fx:id="colSpId" text="SP ID" prefWidth="80"/>
+                        <TableColumn fx:id="colTanggal" text="Tanggal" prefWidth="120"/>
+                        <TableColumn fx:id="colTotal" text="Total" prefWidth="120"/>
+                        <TableColumn fx:id="colStatus" text="Status" prefWidth="120"/>
                     </columns>
-                     <columnResizePolicy>
+                      <Label fx:id="labelGrandTotal" text="Total: Rp 0"/>
+                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
