--- a/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
@@ -68,7 +68,7 @@
                         </AnchorPane>
                         <HBox alignment="TOP_RIGHT" layoutX="571.0" layoutY="-36.0" prefHeight="36.0" prefWidth="499.0" spacing="10.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="571.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
                            <children>
-                              <Button fx:id="btnAdd" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="105.0" text="Add">
+                              <Button fx:id="btnAdd" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goAdd" prefHeight="44.0" prefWidth="105.0" text="Add">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -77,7 +77,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="btnUpdate" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="105.0" text="Update">
+                              <Button fx:id="btnUpdate" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goUpdate" prefHeight="44.0" prefWidth="105.0" text="Update">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -104,7 +104,7 @@
                       <TableColumn fx:id="colNoTag" prefWidth="75.0" text="No.Tagihan" />
                       <TableColumn fx:id="colNoSP" prefWidth="75.0" text="No.Surat" />
                         <TableColumn fx:id="colPerusahaan" prefWidth="75.0" text="Perusahaan" />
-                        <TableColumn fx:id="colTanggal" prefWidth="75.0" text="Tanggal" />
+                        <TableColumn fx:id="colTanggal" prefWidth="75.0" text="Tenggat Pembayaran" />
                         <TableColumn fx:id="colTotal" prefWidth="75.0" text="Total" />
                         <TableColumn fx:id="colStatus" prefWidth="75.0" text="Status" />
                     </columns>
