--- a/src/main/resources/com/project/app/fxml/popup/createperusahaan_popup.fxml
+++ b/src/main/resources/com/project/app/fxml/popup/createperusahaan_popup.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="popupRoot" prefHeight="1000.0" prefWidth="1400.0" style="-fx-background-color: rgba(0, 0, 0, 0.45);" stylesheets="@../../css/salesoverview_popup.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.CreateAccountPopupController">
+<AnchorPane fx:id="popupRoot" prefHeight="1000.0" prefWidth="1400.0" style="-fx-background-color: rgba(0, 0, 0, 0.45);" stylesheets="@../../css/salesoverview_popup.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.CreatePerusahaanPopupController">
 
     <children>
         <VBox alignment="TOP_CENTER" layoutX="460.0" layoutY="224.0" prefHeight="479.0" prefWidth="502.0" spacing="20.0" style="-fx-background-color: #f6f6f6; -fx-padding: 25; -fx-background-radius: 12;" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="449.0" AnchorPane.rightAnchor="449.0" AnchorPane.topAnchor="260.0">
@@ -27,7 +27,7 @@
                         </Text>
                      </children>
                   </HBox>
-                  <Button fx:id="btnBack" mnemonicParsing="false" prefHeight="54.0" prefWidth="52.0" style="-fx-background-color: transparent;">
+                  <Button fx:id="btnBack" mnemonicParsing="false" onAction="#goBack" prefHeight="54.0" prefWidth="52.0" style="-fx-background-color: transparent;">
                      <graphic>
                         <ImageView fitHeight="46.0" fitWidth="50.0" opacity="0.61" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -67,7 +67,7 @@
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField fx:id="usernameField" prefHeight="42.0" prefWidth="295.0" />
+                                                <TextField fx:id="namaField" prefHeight="42.0" prefWidth="295.0" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
@@ -77,7 +77,7 @@
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField fx:id="emailField" prefHeight="52.0" prefWidth="295.0" />
+                                                <TextField fx:id="alamatField" prefHeight="52.0" prefWidth="295.0" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="5.0">
@@ -87,7 +87,7 @@
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField fx:id="noTelpField" prefHeight="47.0" prefWidth="295.0" />
+                                                <TextField fx:id="telpField" prefHeight="47.0" prefWidth="295.0" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
@@ -97,7 +97,7 @@
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField fx:id="passwordField" prefHeight="39.0" prefWidth="274.0" />
+                                                <TextField fx:id="emailField" prefHeight="39.0" prefWidth="274.0" />
                                              </children>
                                           </HBox>
                                        </children>
@@ -110,7 +110,7 @@
                   </HBox>
                   <HBox alignment="TOP_RIGHT" prefHeight="39.0" prefWidth="434.0">
                      <children>
-                        <Button fx:id="btnAdd" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="83.0" style="-fx-background-color: black; -fx-background-radius: 5;" text="Add" textFill="WHITE">
+                        <Button fx:id="btnSubmit" graphicTextGap="10.0" mnemonicParsing="false" onAction="#submitCompany" prefHeight="32.0" prefWidth="83.0" style="-fx-background-color: black; -fx-background-radius: 5;" text="Add" textFill="WHITE">
                            <graphic>
                               <ImageView fitHeight="83.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
