Add Change Password Features

--- a/src/main/resources/com/project/app/fxml/components/sidebar.fxml
+++ b/src/main/resources/com/project/app/fxml/components/sidebar.fxml
@@ -112,7 +112,7 @@
                               <Font name="Georgia" size="13.0" />
                            </font>
                         </Text>
-                        <Hyperlink text="Click Me!">
+                        <Hyperlink fx:id="goChangePass" text="Click Me!">
                            <font>
                               <Font name="Georgia" size="13.0" />
                            </font>
